force-app/main/default/objects/MDR_Data_Element_Instance__c/MDR_Data_Element_Instance__c.object-meta.xml
<CustomObject>
    <label>Data Element Instance</label>
    <nameField>
        <displayFormat>DEI-{0000000}</displayFormat>
        <label>Data Element Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Element Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>