force-app/main/default/objects/MDR_Data_Element_Instance__c/fields/Is_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Source</label>
    <type>Checkbox</type>
</CustomField>