force-app/main/default/objects/MDR_Data_Element_Instance__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <referenceTo>MDR_Data_Element_Source__c</referenceTo>
    <relationshipLabel>Data Element Instances</relationshipLabel>
    <relationshipName>Data_Element_Instances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>