force-app/main/default/objects/MDR_Data_Element_Instance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Element__c</columns>
    <columns>Source__c</columns>
    <columns>Field__c</columns>
    <columns>Format__c</columns>
    <columns>Is_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>